# TFG-FDTD

./: ex.txt  fd3d_1_1.py  fd3d_1_2.py
Cuda/Prueba-fd3d_1_1/Code/: CMakeLists.txt  P-fd3d_1_1.cu
Cuda/Suma-Vectores-Con-Bloques/Code/: CMakeLists.txt  Suma-Vectores-Con-Bloques.cu
Cuda/Traspuesta matriz/Code/: CMakeLists.txt  Traspuesta.cu
Cuda/fd1d_2_1/Code/: CMakeLists.txt  fd1d_2_1.cu
Cuda/fd1d_2_2/Code/: CMakeLists.txt  fd1d_2_2.cu
Cuda/fd3d_1_1/Code/: CMakeLists.txt  fd3d_1_1.cu
Cuda/fd3d_1_2/Code/: CMakeLists.txt  fd3d_1_2.cu
Cuda/fd3d_1_3/Code/: CMakeLists.txt  fd3d_1_3.cu
Cuda/fd3d_1_4/Code/: CMakeLists.txt  fd3d_1_4.cu
Cuda/fd3d_1_5/Code/: CMakeLists.txt  fd3d_1_5.cu
Diapositivas/: FDTD.pptx
FD2D/src/: CMakeLists.txt
Memoria/: Memoria.tex  TFGv7.tex
Python/: fd1d_2_1.py  fd1d_2_2.py  fd3d_1_2.py  fd3d_1_3.py  fd3d_1_4.py  fd3d_1_5.py
Python/learning_py/: Bucles.py  script1.py  threenames.py
ez/: ez.txt
learning_py/: myfile.py  saveit.txt
python/: fd2d_3_4.py
src/: CMakeLists.txt  HOST_FD2D_SIMP.cu  fd1d_2_1.cu  fd2d.cu  fd2d_simp.cu  fd2d_simple.cu  fdtd.cu  hostfd2d.cu
